--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>JSPM Demo</title>
-    <script type="text/javascript" src="jspm_packages/system.js"></script>
+    <script type="text/javascript" src="jspm_packages/system.src.js"></script>
     <script type="text/javascript" src="config.js"></script>
     <script type="text/javascript">
       System.import('lib/boot');
